[package]
name = "context"
version = "2.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>", "Leonard Hecker <leonard@hecker.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/zonyitoo/context-rs"
description = "Cooperative multitasking for Rust using Boost.Context"
readme = "README.md"
build = "build.rs"
links = "boost_context"
keywords = [
    "concurrency",
    "context",
    "coroutines",
]
exclude = [
    ".gitattributes",
    ".gitignore",
    ".travis.yml",
    "appveyor.yml",
    "benches/**/*",
]

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2"
winapi = "0.2"

[build-dependencies]
cc = "~1"

[features]
nightly = []
